5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1582_1334.log
== TEST (2019-03-16 22:03:59) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ", 20//12)

print("Potenciacao: ", 2**2)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  1
Potenciacao:  4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 22:04:15) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ", 20//12)

print("Potenciacao: ", 2***2)
-- ERROR:
File "XXXX", line 11
    print("Potenciacao: ", 2***2)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 22:04:26) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ", 20//12)

print("Potenciacao: ", 2**2*2)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  1
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 22:04:44) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ", 20/12)

print("Potenciacao: ", 2**2*2)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  1.6666666666666667
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 22:05:58) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)
resto=int(20//12)
print("Resto: ",)

print("Potenciacao: ", 2**2*2)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto: 
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 22:06:45) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ",20%12)

print("Potenciacao: ", 2**2*2)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 22:06:47) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9-1)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ",20%12)

print("Potenciacao: ", 2**2*2)
-- EXECUTION TIME:
0.188805
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
